[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pybuildkite = "^1.2.4"
python-dotenv = "^1.0.1"
notebook = "^7.2.2"
flask = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pysmee = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
